--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,6 +11,8 @@
 	// Uncomment when using a ptrace-based debugger like C++, Go, and Rust
 	// "runArgs": [ "--cap-add=SYS_PTRACE", "--security-opt", "seccomp=unconfined" ],
 
+	"postCreateCommand": "pwsh ./.devcontainer/Update-DevContainer.ps1",
+
 	// Set `remoteUser` to `root` to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
 	"remoteUser": "vscode",
 	"features": {
@@ -23,7 +25,8 @@
 			"extensions": [
 				"ms-azuretools.vscode-bicep",
 				"yzhang.markdown-all-in-one",
-				"eamodio.gitlens"
+				"eamodio.gitlens",
+				"GitHub.copilot"
 			]
 		}
 	}
